created previous option

--- a/hello.html
+++ b/hello.html
@@ -28,7 +28,7 @@
 				<button type="button" id="medium1" value="" onclick="fillAnswer('1','medium')">T</button>
 				<button type="button" id="medium2" value="" onclick="fillAnswer('2','medium')">E</button>
 				<button type="button" id="medium3" value="" onclick="fillAnswer('3','medium')">X</button>
-				<button type="button" id="medium4" value="" onclick="fillAnswer('4','medium')" )>T</button>
+				<button type="button" id="medium4" value="" onclick="fillAnswer('4','medium')">T</button>
 			</fieldset>
 			<fieldset id="toughJumble">
 				<legend>jumbled words</legend>
@@ -36,13 +36,14 @@
 				<button type="button" id="tough1" value="" onclick="fillAnswer('1','tough')">T</button>
 				<button type="button" id="tough2" value="" onclick="fillAnswer('2','tough')">E</button>
 				<button type="button" id="tough3" value="" onclick="fillAnswer('3','tough')">X</button>
-				<button type="button" id="tough4" value="" onclick="fillAnswer('4','tough')" )>T</button>
+				<button type="button" id="tough4" value="" onclick="fillAnswer('4','tough')">T</button>
 				<button type="button" id="tough5" value="" onclick="fillAnswer('5','tough')">S</button>
 			</fieldset>
 			<div id="action">
 				<button type="button" id="checker" onclick="isanswercorrect()">Submit</button>
 				<button type="button" id="next" onclick="nextWord()">Next</button>
 				<button type="button" id="reset" onclick="clearOutput()">Reset</button>
+				<button type="button" id="previous" onclick="previousWord()">Previous</button>
 				<p id="score"> score 0</p>
 			</div>
 			</div>
